--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,22 @@
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/crm
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/crm?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
 #server.port = 8082
 #security.basic.enabled=false
 
-
 ## Spring view resolver set up
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
-
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url = jdbc:mysql://localhost:3306/users?useSSL=false
-#spring.datasource.username = root
-#spring.datasource.password = root
-
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
+
 
