--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.jpa.hibernate.ddl-auto=update
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/crm?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/crm
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -17,6 +17,6 @@ spring.datasource.password=root
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.format_sql=true
 
 
