--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.hibernate.ddl-auto=update
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/crm
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=kannur@123
 
-#server.port = 8082
+#server.port = 8080
 #security.basic.enabled=false
 
 ## Spring view resolver set up
