--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 spring.jpa.hibernate.ddl-auto=update
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/crm9
+spring.datasource.url=jdbc:mysql://localhost:3306/crm
 spring.datasource.username=root
-spring.datasource.password=sa123$
+spring.datasource.password=root
 
 #server.port = 8082
 #security.basic.enabled=false
