--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+<!--        <dependency>
+            <groupId>org.serilogj.serilogj</groupId>
+            <artifactId>serilogj</artifactId>
+            <version>0.6.1</version>
+        </dependency>-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
