--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.crm</groupId>
-  <artifactId>core-crm</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-<!--    <packaging>war</packaging>-->
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.crm</groupId>
+    <artifactId>core-crm</artifactId>
+    <version>1</version>
+    <!--    <packaging>war</packaging>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+<!--        <version>2.4.3</version>-->
+                <version>2.1.2.RELEASE</version>
     </parent>
 
     <properties>
@@ -20,16 +21,16 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-<!--        <dependency>
-            <groupId>org.serilogj.serilogj</groupId>
-            <artifactId>serilogj</artifactId>
-            <version>0.6.1</version>
-        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-api</artifactId>-->
+        <!--            <version>1.7.30</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>
+                    <groupId>org.serilogj.serilogj</groupId>
+                    <artifactId>serilogj</artifactId>
+                    <version>0.6.1</version>
+                </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -65,7 +66,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
+            <!--            <scope>runtime</scope>-->
             <optional>true</optional>
         </dependency>
 
@@ -144,5 +145,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>  
+    </build>
 </project>
