--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 spring.jpa.hibernate.ddl-auto=update
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url=jdbc:mysql://localhost:3306/crmdemo?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/crm
 spring.datasource.username=root
 spring.datasource.password=root
@@ -22,3 +23,15 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 
 
+logging.level.org.springframework=ERROR
+logging.level.com.crm=DEBUG
+logging.file=app.log
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+## if no active profile, default is 'default'
+##spring.profiles.active=prod
+
+# root level
+#logging.level.=DEBUG
