--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/crmdemo?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/crm
+spring.datasource.url=jdbc:mysql://localhost:3306/crm?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=sa123$
 
-#server.port = 8082
+#server.port = 8080
 #security.basic.enabled=false
 
 ## Spring view resolver set up
